--- a/charts/dremio/templates/dremio-master.yaml
+++ b/charts/dremio/templates/dremio-master.yaml
@@ -4,7 +4,7 @@ metadata:
   name: dremio-master
 spec:
   serviceName: "dremio-cluster-pod"
-  replicas: {{.Values.coordinator.master_count}}
+  replicas: 1
   selector:
     matchLabels:
       app: dremio-coordinator
@@ -64,6 +64,9 @@ spec:
         - containerPort: 45678
           name: server
       initContainers:
+      - name: start-only-one-master
+        image: busybox
+        command: ["sh", "-c", "INDEX=${HOSTNAME##*-}; if [ $INDEX -ne 0 ]; then echo Only one master should be running.; exit 1; fi; "]
       - name: wait-for-zk
         image: busybox
         command:  ["sh", "-c", "until ping -c 1 -W 1 zk-hs > /dev/null; do echo waiting for zookeeper host; sleep 2; done;"]
