DX-15734: add dremio-admin
Make running it conditional - either this is running or the Dremio cluster.
Controlled via helm value --set DremioAdmin=true

Change-Id: Ia6d30bcda29e5ea606f57aa6ac22b65aad8a3a91

--- a/charts/dremio/templates/dremio-executor.yaml
+++ b/charts/dremio/templates/dremio-executor.yaml
@@ -1,3 +1,4 @@
+{{ if not .Values.DremioAdmin }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -91,3 +92,4 @@ spec:
       resources:
         requests:
           storage: {{.Values.executor.volumeSize}}
+{{ end }}
