--- a/charts/dremio/templates/dremio-coordinator.yaml
+++ b/charts/dremio/templates/dremio-coordinator.yaml
@@ -1,3 +1,4 @@
+{{ if not .Values.DremioAdmin }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -70,3 +71,4 @@ spec:
       imagePullSecrets:
         - name: {{ .Values.imagePullSecrets }}
       {{- end}}
+{{ end }}
