--- a/charts/dremio/templates/dremio-master.yaml
+++ b/charts/dremio/templates/dremio-master.yaml
@@ -1,3 +1,4 @@
+{{ if not .Values.DremioAdmin }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -111,3 +112,4 @@ spec:
       resources:
         requests:
           storage: {{.Values.coordinator.volumeSize}}
+{{ end }}
