--- a/charts/dremio/templates/dremio-service-client.yaml
+++ b/charts/dremio/templates/dremio-service-client.yaml
@@ -1,3 +1,4 @@
+{{ if not .Values.DremioAdmin }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -38,3 +39,4 @@ spec:
   clusterIP: None
   selector:
     role: dremio-cluster-pod
+{{ end }}
