DX-15572: Add support of uploads in S3 or ADLS
Enabling support of uploads to S3 or ADLS via
config entries in values.yaml.

Change-Id: Ie3233cb7085268ecd6aef010be5f61ad67cefc3a

--- a/charts/dremio/config/dremio.conf
+++ b/charts/dremio/config/dremio.conf
@@ -20,12 +20,22 @@ paths: {
 
   # the distributed path Dremio data including job results, downloads, uploads, etc
   #dist: "pdfs://"${paths.local}"/pdfs"
+
+  # If you are editing the uploads value in this file, please delete all the lines starting with double curly braces
+  {{- if .Values.uploads.type }}
+  {{- if eq .Values.uploads.type "aws" }}
+  uploads: "s3a://{{required "AWS bucketname required" .Values.uploads.aws.bucketName}}{{required "Path required" .Values.uploads.aws.path}}"
+  {{- end }}
+  {{- if eq .Values.uploads.type "azure" }}
+  uploads: "adl://{{required "Azure Datalake store name required" .Values.uploads.azure.datalakeStoreName}}.azuredatalakestore.net{{required "Path required" .Values.uploads.azure.path}}"
+  {{- end }}
+  {{- end }}
 }
 
 services: {
   # The services running are controlled via command line options passed in
   # while starting the services via kubernetes. Updating the three values
-  # below will not impact what services are running. 
+  # below will not impact what services are running.
   #   coordinator.enabled: true,
   #   coordinator.master.enabled: true,
   #   executor.enabled: true
