--- a/charts/dremio/values.yaml
+++ b/charts/dremio/values.yaml
@@ -23,6 +23,11 @@ executor:
   cpu: 4
   count: 3
   volumeSize: 100Gi
+zookeeper:
+  memory: 1024
+  cpu: 0.5
+  count: 3
+  volumeSize: 10Gi
 
 # If your Kubernetes cluster does not support LoadBalancer,
 # comment out the line below for the helm chart to succeed or add
