DX-15693: enable nodeSelector for pods
Change-Id: I3b6746fb8eddeff8c56ae4876453d47bfc30ef9b

--- a/charts/dremio/templates/dremio-executor.yaml
+++ b/charts/dremio/templates/dremio-executor.yaml
@@ -25,6 +25,12 @@ spec:
         dremio-configmap/checksum: {{ (.Files.Glob "config/*").AsConfig | sha256sum }}
     spec:
       terminationGracePeriodSeconds: 5
+      {{- if .Values.nodeSelector }}
+      nodeSelector:
+        {{- range $key, $value := .Values.nodeSelector }}
+        {{ $key }}: {{ $value }}
+        {{- end }}
+      {{- end }}
       containers:
       - name: dremio-executor
         image: {{.Values.image}}
