DX-15949: enable readiness probe for dremio-master
Change-Id: I2e3444eccd95cdce7fab18045b43270cbbb07f79

--- a/charts/dremio/templates/dremio-master.yaml
+++ b/charts/dremio/templates/dremio-master.yaml
@@ -64,6 +64,11 @@ spec:
           name: client
         - containerPort: 45678
           name: server
+        readinessProbe:
+          tcpSocket:
+            port: 9047
+          initialDelaySeconds: 5
+          periodSeconds: 5
       initContainers:
       - name: start-only-one-master
         image: busybox
