--- a/charts/dremio/values.yaml
+++ b/charts/dremio/values.yaml
@@ -51,7 +51,7 @@ serviceType: LoadBalancer
 # For private and protected docker image repository, you should store
 # the credentials in a kubernetes secret and provide the secret name here.
 # For more information, see https://kubernetes.io/docs/concepts/containers/images/#specifying-imagepullsecrets-on-a-pod
-#imagePullSecrets=secretname
+#imagePullSecrets: secretname
 
 # Target pods to nodes based on labels set on the nodes.
 # For more information, see https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
