DX-16712: Use Azure Storage for uploads and accelerator data
1. The URL for path.dist values for S3, ADLS are different from
pre-3.2.0 and 3.2.0+. Handle it.
2. Add support for Azure Storage v2 for path.dist

Change-Id: I7730ed4caac22240e579e41641e720bdedf05ec0

--- a/charts/dremio/config/dremio.conf
+++ b/charts/dremio/config/dremio.conf
@@ -22,12 +22,25 @@ paths: {
   #dist: "pdfs://"${paths.local}"/pdfs"
 
   # If you are editing the uploads value in this file, please delete all the lines starting with double curly braces
-  {{- if .Values.uploads.type }}
-  {{- if eq .Values.uploads.type "aws" }}
-  uploads: "s3a://{{required "AWS bucketname required" .Values.uploads.aws.bucketName}}{{required "Path required" .Values.uploads.aws.path}}"
+  {{- if .Values.distStorage.type }}
+  {{- if and .Values.dremioVersion (lt .Values.dremioVersion "3.2.0") }}
+  {{- if eq .Values.distStorage.type "aws" }}
+  uploads: "s3a://{{required "AWS bucketname required" .Values.distStorage.aws.bucketName}}{{required "Path required" .Values.distStorage.aws.path}}"
   {{- end }}
-  {{- if eq .Values.uploads.type "azure" }}
-  uploads: "adl://{{required "Azure Datalake store name required" .Values.uploads.azure.datalakeStoreName}}.azuredatalakestore.net{{required "Path required" .Values.uploads.azure.path}}"
+  {{- if eq .Values.distStorage.type "azure" }}
+  uploads: "adl://{{required "Azure Datalake store name required" .Values.distStorage.azure.datalakeStoreName}}.azuredatalakestore.net{{required "Path required" .Values.distStorage.azure.path}}"
+  {{- end }}
+  {{- else }} # dremio_version > 3.2.0
+  {{- if eq .Values.distStorage.type "aws" }}
+  uploads: "dremioS3://{{required "AWS bucketname required" .Values.distStorage.aws.bucketName}}{{required "Path required" .Values.distStorage.aws.path}}"
+  {{- end }}
+  {{- if eq .Values.distStorage.type "azure" }}
+  uploads: "dremioAdl://{{required "Azure Datalake store name required" .Values.distStorage.azure.datalakeStoreName}}.azuredatalakestore.net{{required "Path required" .Values.distStorage.azure.path}}"
+  {{- end }}
+  {{- if eq .Values.distStorage.type "azureStorage" }}
+  uploads: "dremioAzureStorage://:///{{required "Azure Storage filesystem required" .Values.distStorage.azureStorage.filesystem}}/{{required "Path for uploads required" .Values.distStorage.azureStorage.uploadsPath}}"
+  accelerator: "dremioAzureStorage://:///{{required "Azure Storage filesystem required" .Values.distStorage.azureStorage.filesystem}}/{{required "Path for uploads required" .Values.distStorage.azureStorage.acceleratorPath}}"
+  {{- end }}
   {{- end }}
   {{- end }}
 }
