--- a/charts/dremio/config/dremio.conf
+++ b/charts/dremio/config/dremio.conf
@@ -42,3 +42,10 @@ services: {
   #
   # Other service parameters can be customized via this file.
 }
+
+{{- if .Values.tlsSecret }}
+services.coordinator.web.ssl.enabled: true
+services.coordinator.web.ssl.auto-certificate.enabled: false
+
+services.coordinator.web.ssl.keyStore: "/opt/dremio/tls/store.pkcs12"
+{{- end }}
