--- a/charts/dremio/values.yaml
+++ b/charts/dremio/values.yaml
@@ -29,6 +29,10 @@ zookeeper:
   count: 3
   volumeSize: 10Gi
 
+# To enable TLS, create a TLS secret in Kubernetes and provide the secret
+# name below. Dremio will then be enabled with TLS.
+#tlsSecret: dremio-tls-secret
+
 # If your Kubernetes cluster does not support LoadBalancer,
 # comment out the line below for the helm chart to succeed or add
 # the correct serviceType for your cluster.
