DX-16819: Add TLS support in Helm chart.
Change-Id: I17e70a423356849c0d2368648a72241b97d5afeb

--- a/charts/dremio/config/dremio.conf
+++ b/charts/dremio/config/dremio.conf
@@ -55,3 +55,10 @@ services: {
   #
   # Other service parameters can be customized via this file.
 }
+
+{{- if .Values.tlsSecret }}
+services.coordinator.web.ssl.enabled: true
+services.coordinator.web.ssl.auto-certificate.enabled: false
+
+services.coordinator.web.ssl.keyStore: "/opt/dremio/tls/store.pkcs12"
+{{- end }}
