DX-16819: Add TLS support in Helm chart.
Change-Id: I17e70a423356849c0d2368648a72241b97d5afeb

--- a/charts/dremio/config/dremio.conf
+++ b/charts/dremio/config/dremio.conf
@@ -42,3 +42,18 @@ services: {
   #
   # Other service parameters can be customized via this file.
 }
+
+{{- if .Values.tls.ui.enabled }}
+services.coordinator.web.ssl.enabled: true
+services.coordinator.web.ssl.auto-certificate.enabled: false
+
+services.coordinator.web.ssl.keyStore: "/opt/dremio/tls/ui.pkcs12"
+{{- end }}
+
+{{- if .Values.tls.client.enabled }}
+# Client endpoint (i.e. ODBC/JDBC) encryption is only supported in Dremio Enterprise Edition.
+services.coordinator.client-endpoint.ssl.enabled: true
+services.coordinator.client-endpoint.ssl.auto-certificate.enabled: false
+
+services.coordinator.client-endpoint.ssl.keyStore: "/opt/dremio/tls/client.pkcs12"
+{{- end }}
