--- a/charts/dremio/config/dremio.conf
+++ b/charts/dremio/config/dremio.conf
@@ -55,3 +55,18 @@ services: {
   #
   # Other service parameters can be customized via this file.
 }
+
+{{- if .Values.tlsSecret }}
+services.coordinator.web.ssl.enabled: true
+services.coordinator.web.ssl.auto-certificate.enabled: false
+
+services.coordinator.web.ssl.keyStore: "/opt/dremio/tls/store.pkcs12"
+
+{{- if .Values.tlsClientEndpoints }}
+# Client endpoint (i.e. ODBC/JDBC) encryption is only supported in Dremio Enterprise Edition.
+services.coordinator.client-endpoint.ssl.enabled: true
+services.coordinator.client-endpoint.ssl.auto-certificate.enabled: false
+
+services.coordinator.client-endpoint.ssl.keyStore: "/opt/dremio/tls/store.pkcs12"
+{{- end }}
+{{- end }}
