--- a/aws/cloudformation/dremio_cf.yaml
+++ b/aws/cloudformation/dremio_cf.yaml
@@ -217,8 +217,6 @@ Resources:
         FromPort: '80'
         ToPort: '80'
         CidrIp: 0.0.0.0/0
-      - IpProtocol: -1
-        SourceSecurityGroupName: "Dremio Access"
   AvailabilityWaitHandle:
     Type: AWS::CloudFormation::WaitConditionHandle
   AvailabilityWaitCondition:
@@ -227,6 +225,13 @@ Resources:
     Properties:
       Handle: !Ref "AvailabilityWaitHandle"
       Timeout: "600"
+
+  DremioSecurityGroupSelfIngress:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      GroupId: !Ref DremioSecurityGroup
+      IpProtocol: -1
+      SourceSecurityGroupId: !Ref DremioSecurityGroup
 
   DremioMaster:
     Type: AWS::EC2::Instance
