--- a/charts/dremio/values.yaml
+++ b/charts/dremio/values.yaml
@@ -1,7 +1,9 @@
 # The image used to build the Dremio cluster. It is recommended to update the
 # version tag to the version that you are using. This will ensure that all
 # the pods are using the same version of the software.
-image: dremio/dremio-oss:latest
+image: dremio/dremio-oss
+imageTag: latest
+
 # Check out Dremio documentation for memory and cpu requirements for
 # the coordinators and the executors.
 # The value of memory should be in MB. CPU is in no of cores.
@@ -22,6 +24,20 @@ executor:
   cpu: 15
   count: 3
   volumeSize: 100Gi
+  cloudCache:
+    # Requires Dremio version 4.0.0 or later
+    enabled: false
+    quota:
+      # Percentage of the diskspace for the running Kubernetes node
+      # that can be used for Cloud Cache files.
+      fs_pct: 70
+      # Percentage of that space that can be used for the internal
+      # Cloud Cache database.
+      db_pct: 70
+      # Percentage of that space that can be used for cacheing
+      # materialised reflections.  This is an upper-bound, not a
+      # reservation.
+      cache_pct: 100
 zookeeper:
   memory: 1024
   cpu: 0.5
@@ -74,24 +90,24 @@ serviceType: LoadBalancer
 
 # Control where uploaded files are stored.
 # See https://docs.dremio.com/deployment/distributed-storage.html for more information
-dremioVersion: "3.2.0" # Dremio Version 3.2.0 or greater
 distStorage:
   # Valid values are local, aws, azure or azureStorage. aws and azure choice requires additional configuration data.
   type: "local"
-  aws: #S3 - used for only uploads
+  aws: # S3
     bucketName: "Your_AWS_bucket_name"
     path: "/"
     accessKey: "Your_AWS_Access_Key"
     secret: "Your_AWS_Secret"
-  azure: #ADLS v1 - used for only uploads
+  azure: # ADLS v1
     datalakeStoreName: "Your_Azure_DataLake_Storage_name"
     path: "/"
     applicationId: "Your_Azure_Application_Id"
     secret: "Your_Azure_Secret"
     oauth2EndPoint: "Azure_OAuth2_Endpoint"
-  azureStorage: #AzureStorage v2 - supported in Dremio version 3.2.0+ - used for uploads and accelerator
+  azureStorage: # AzureStorage v2
     accountName: "Azure_storage_v2_account_name"
     accessKey: "Access_key_for_the_storage_account"
+
     filesystem: "Filesystem_in_storage_account"
     uploadsPath: "Path_for_uploads"
     acceleratorPath: "Path_for_accelerator"
