--- a/charts/dremio/templates/dremio-executor.yaml
+++ b/charts/dremio/templates/dremio-executor.yaml
@@ -28,7 +28,7 @@ spec:
       {{- end }}
       containers:
       - name: dremio-executor
-        image: {{.Values.image}}
+        image: {{.Values.image}}:{{.Values.imageTag}}
         imagePullPolicy: IfNotPresent
         resources:
           requests:
@@ -63,7 +63,7 @@ spec:
         command:  ["sh", "-c", "until ping -c 1 -W 1 zk-hs > /dev/null; do echo waiting for zookeeper host; sleep 2; done;"]
       # since we're mounting a separate volume, reset permission to dremio uid/gid
       - name: chown-data-directory
-        image: {{.Values.image}}
+        image: {{.Values.image}}:{{.Values.imageTag}}
         imagePullPolicy: IfNotPresent
         securityContext:
           runAsUser: 0
@@ -93,4 +93,20 @@ spec:
       resources:
         requests:
           storage: {{.Values.executor.volumeSize}}
+  {{- if .Values.executor.cloudCache.enabled }}
+  - metadata:
+      name: dremio-executor-cloudCache-volume
+    spec:
+      capacity:
+        storage: {{ .Values.executor.cloudCache.volumeSize }}
+      volumeMode: Filesystem
+      accessModes:
+        - ReadWriteOnce
+      persistentVolumeReclaimPolicy: Delete
+      {{- if .Values.executor.cloudCache.storageClass }}
+      storageClassName: {{ .Values.executor.cloudCache.storageClass }}
+      {{- end }}
+      local:
+        path: {{ .Values.executor.cloudCache.localPath }}
+  {{- end }}
 {{ end }}
