[WIP] Add Helm C3 executor and dist store caching
- Adds the concept of an imageTag to expose features that are
  introduced only in newer versions of Dremio.
- Removes the dremioVersion value that needs to be manually set
  to reference the same version that is used by the image.

Change-Id: Idccb0acbd82a8f3ed50b249599c0b04e93641406

--- a/charts/dremio/config/dremio.conf
+++ b/charts/dremio/config/dremio.conf
@@ -23,7 +23,7 @@ paths: {
 
   # If you are editing the uploads value in this file, please delete all the lines starting with double curly braces
   {{- if .Values.distStorage.type }}
-  {{- if and .Values.dremioVersion (lt .Values.dremioVersion "3.2.0") }}
+  {{- if lt .Values.imageTag "3.2.0" }}
   {{- if eq .Values.distStorage.type "aws" }}
   uploads: "s3a://{{required "AWS bucketname required" .Values.distStorage.aws.bucketName}}{{required "Path required" .Values.distStorage.aws.path}}"
   {{- end }}
@@ -54,7 +54,28 @@ services: {
   #   executor.enabled: true
   #
   # Other service parameters can be customized via this file.
+
+  # C3 is supported in 4.0.0+.
+  {{- if or (ge .Values.imageTag "4.0.0") (eq .Values.imageTag "latest") }}
+  executor: {
+    cache: {
+      path.db: "!! TBD !!",
+      path.fs: ["!! TBD !!"],
+      pctquota.db: ???
+      pctquota.fs [???]
+    }
+  }
+  {{- end }}
 }
+
+{{- if and (or (ge .Values.imageTag "4.0.0") (eq .Values.imageTag "latest")) (ne .Values.distStorage.type "local") }}
+debug: {
+  # Enable caching for distributed storage, it is turned off by default
+  dist.caching.enabled: true,
+  # Max percent of total available cache space to use when possible for distributed storage
+  dist.max.cache.space.percent: 100
+}
+{{- end }}
 
 {{- if .Values.tls.ui.enabled }}
 services.coordinator.web.ssl.enabled: true
