--- a/charts/dremio/templates/dremio-executor.yaml
+++ b/charts/dremio/templates/dremio-executor.yaml
@@ -28,7 +28,7 @@ spec:
       {{- end }}
       containers:
       - name: dremio-executor
-        image: {{.Values.image}}
+        image: {{.Values.image}}:{{.Values.imageTag}}
         imagePullPolicy: IfNotPresent
         resources:
           requests:
@@ -63,7 +63,7 @@ spec:
         command:  ["sh", "-c", "until ping -c 1 -W 1 zk-hs > /dev/null; do echo waiting for zookeeper host; sleep 2; done;"]
       # since we're mounting a separate volume, reset permission to dremio uid/gid
       - name: chown-data-directory
-        image: {{.Values.image}}
+        image: {{.Values.image}}:{{.Values.imageTag}}
         imagePullPolicy: IfNotPresent
         securityContext:
           runAsUser: 0
